--- a/frontend/assets/stylesheets/components/_text-helpers.scss
+++ b/frontend/assets/stylesheets/components/_text-helpers.scss
@@ -87,6 +87,12 @@
     }
 }
 
+.h-aside {
+    @include fs-textSans(1);
+    border-top: 1px solid $c-neutral7;
+    padding: rem($gs-baseline / 2) 0;
+}
+
 /* Text Helpers - Headings
    ========================================================================== */
 
