--- a/frontend/assets/stylesheets/components/_listings.scss
+++ b/frontend/assets/stylesheets/components/_listings.scss
@@ -59,7 +59,7 @@
     .listing__title {
         @include mq(mem-full) {
             padding-top: rem($gs-baseline / 2);
-            border-top: 1px solid $c-border-neutral;
+            border-top: 1px solid $c-border-brand;
         }
     }
 }
