--- a/frontend/assets/stylesheets/layout/_layout.scss
+++ b/frontend/assets/stylesheets/layout/_layout.scss
@@ -78,6 +78,15 @@ body {
     vertical-align: middle;
 }
 
+.u-divider {
+    padding-top: rem($gs-baseline / 2);
+    border-top: 1px solid $c-border-brand;
+}
+.u-divider-neutral {
+    padding-top: rem($gs-baseline / 2);
+    border-top: 1px solid $c-border-neutral;
+}
+
 /* Side Margins
    ========================================================================== */
 
