--- a/frontend/app/views/fragments/page/pageHeader.scala.html
+++ b/frontend/app/views/fragments/page/pageHeader.scala.html
@@ -1,7 +1,7 @@
 @(title: String, introOpt: Option[String] = None)
 
 <section class="page-header">
-    <h1 class="page-headline">@title</h1>
+    <h1 class="page-headline">@Html(title)</h1>
     @for(intro <- introOpt) {
         <p class="page-intro">@intro</p>
     }
