Cleanup actions styles

--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -213,7 +213,7 @@
                     </div>
 
                     @if(!event.isBookable) {
-                        <a class="action action--fullwidth action--search" href="@event.metadata.eventListUrl">Find other @event.metadata.title</a>
+                        <a class="action u-fullwidth action--search" href="@event.metadata.eventListUrl">Find other @event.metadata.title</a>
                     }
                 </div>
             </div>
