Don't need to wrap title in Html()

--- a/frontend/app/views/error500.scala.html
+++ b/frontend/app/views/error500.scala.html
@@ -1,7 +1,7 @@
 @(ex: Throwable)
 @main("Internal Server Error") {
     <main role="main" class="page-content">
-        @fragments.page.pageHeader("Error 500 &ndash; Internal server error")
+        @fragments.page.pageHeader("Error 500 – Internal server error")
         <section class="page-section">
             <div class="page-section__content copy">
                 <p>
