--- a/frontend/app/views/fragments/event/itemMetaAvailability.scala.html
+++ b/frontend/app/views/fragments/event/itemMetaAvailability.scala.html
@@ -18,17 +18,30 @@
                     </span>
                 } else {
                     @for(pricing <- ticket.cost) {
-                        <div class="js-event-price">
-                            <span class="event-item__price-amount js-event-price-value" data-discount-text="@pricing.discountPrice" itemprop="highPrice">
+                        @if(event.hasMemberTicket) {
+                            <div class="js-event-price">
+                                <span class="event-item__price-amount js-event-price-value"
+                                      data-discount-text="@pricing.discountPrice"
+                                      itemprop="highPrice">
+                                @pricing.formattedPrice
+                                </span>
+
+                                <span class="event-item__price-amount-discount js-event-price-discount"
+                                      data-discount-text="Full price @pricing.formattedPrice"
+                                      itemprop="lowPrice" content="@pricing.discountPrice">
+                                    Partners/Patrons: @pricing.discountPrice
+                                </span>
+                                <span class="event-item__price-amount-discount js-event-price-saving"
+                                      data-discount-text="You save @pricing.savingPrice">
+                                    (Save @pricing.savingPrice)
+                                </span>
+                            </div>
+                        } else {
+                            <span class="event-item__price-amount"
+                                  itemprop="highPrice">
                                 @pricing.formattedPrice
                             </span>
-                            <span class="event-item__price-amount-discount js-event-price-discount" data-discount-text="Full price @pricing.formattedPrice" itemprop="lowPrice" content="@pricing.discountPrice">
-                               Partners/Patrons: @pricing.discountPrice
-                            </span>
-                            <span class="event-item__price-amount-discount js-event-price-saving" data-discount-text="You save @pricing.savingPrice">
-                                Save @pricing.savingPrice
-                            </span>
-                        </div>
+                        }
                     }
                 }
             }
