Use the slug on the event listing page and redirect bad slugs

--- a/frontend/app/views/fragments/event/item.scala.html
+++ b/frontend/app/views/fragments/event/item.scala.html
@@ -6,13 +6,13 @@
 <div class="event-item" itemscope itemtype="http://schema.org/Event">
     <div class="event-item__container">
         <div class="event-item__media">
-            <a href="/event/@event.id" itemprop="image" content="@event.socialImgUrl">
+            <a href="@routes.Event.details(event.slug)" itemprop="image" content="@event.socialImgUrl">
                 @fragments.event.image(event)
             </a>
         </div>
         <div class="event-item__content">
             <div class="event-item__meta">
-                <a href="/event/@event.id" itemprop="url" content="@event.memUrl">
+                <a href="@routes.Event.details(event.slug)" itemprop="url" content="@event.memUrl">
                     @fragments.event.itemMetaTitle(event)
                     <div class="event-item__time" itemprop="startDate" content="@event.start">@event.start.pretty</div>
                     <div class="event-item__location" itemprop="location" itemscope itemtype="http://schema.org/Place">
