--- a/frontend/assets/stylesheets/style.scss
+++ b/frontend/assets/stylesheets/style.scss
@@ -99,6 +99,7 @@
 @import 'components/features';
 @import 'components/messages';
 @import 'components/warnings';
+@import 'components/util-page';
 
 // Dev modules:
 // - Pattern library
