--- a/frontend/app/views/fragments/event/item.scala.html
+++ b/frontend/app/views/fragments/event/item.scala.html
@@ -1,29 +1,25 @@
 @(event: model.RichEvent.RichEvent)
+
 @import views.support.Dates._
 @import configuration.Config
 @import model.Eventbrite._
 
-<div class="event-item" itemscope itemtype="http://schema.org/Event">
-    <div class="event-item__container">
-        <div class="event-item__media">
-            <a href="@routes.Event.details(event.slug)" itemprop="image" content="@event.socialImgUrl">
-                @fragments.event.image(event)
-            </a>
-        </div>
-        <div class="event-item__content">
-            <div class="event-item__meta">
-                <a href="@routes.Event.details(event.slug)" itemprop="url" content="@event.memUrl">
-                    @fragments.event.itemMetaTitle(event)
-                    <div class="event-item__time" itemprop="startDate" content="@event.start">@event.start.pretty</div>
-                    <div class="event-item__location" itemprop="location" itemscope itemtype="http://schema.org/Place">
-                        @fragments.event.addressSummary(event)
-                    </div>
-                    <div class="event-item__footer">
-                        @fragments.event.itemMetaAvailability(event)
-                        <button class="action-proceed event-item__action" itemprop="url"></button>
-                    </div>
-                </a>
+<a href="@routes.Event.details(event.slug)" class="event-item" itemscope itemtype="http://schema.org/Event">
+    <meta itemprop="url" content="@event.memUrl">
+    <div class="event-item__media" itemprop="image" content="@event.socialImgUrl">
+        @fragments.event.image(event)
+    </div>
+    <div class="event-item__content">
+        <div class="event-item__meta">
+            @fragments.event.itemMetaTitle(event)
+            <div class="event-item__time" itemprop="startDate" content="@event.start">@event.start.pretty</div>
+            <div itemprop="location" itemscope itemtype="http://schema.org/Place">
+                @fragments.event.addressSummary(event)
+            </div>
+            <div class="event-item__footer">
+                @fragments.event.itemMetaAvailability(event)
+                <button class="action-proceed event-item__action" itemprop="url"></button>
             </div>
         </div>
     </div>
-</div>
+</a>
