--- a/frontend/app/views/fragments/event/itemHero.scala.html
+++ b/frontend/app/views/fragments/event/itemHero.scala.html
@@ -4,32 +4,27 @@
 @import configuration.Config
 @import model.Eventbrite._
 
-<div class="event-item event-item--hero" itemscope itemtype="http://schema.org/Event">
-    <div class="event-item__container">
-        <div class="event-item__content">
-            <div class="event-item__meta">
-                <a href="@routes.Event.details(event.slug)" itemprop="url" content="@event.memUrl">
-                    @fragments.event.itemMetaTitle(event)
-                    <div class="event-item__time" itemprop="startDate" content="@event.start">@event.start.pretty</div>
-                    <div class="event-item__location" itemprop="location" itemscope itemtype="http://schema.org/Place">
-                        @fragments.event.addressSummary(event)
-                    </div>
-                    @for(desc <- event.description) {
-                        <div class="event-item__description" itemprop="description">
-                            @desc.blurb
-                        </div>
-                    }
-                    <div class="event-item__footer">
-                        @fragments.event.itemMetaAvailability(event)
-                        <button class="action-proceed event-item__action" itemprop="url"></button>
-                    </div>
-                </a>
+<a href="@routes.Event.details(event.slug)" class="event-item event-item--hero" itemscope itemtype="http://schema.org/Event">
+    <meta itemprop="url" content="@event.memUrl">
+    <div class="event-item__content">
+        <div class="event-item__meta">
+            @fragments.event.itemMetaTitle(event)
+            <div class="event-item__time" itemprop="startDate" content="@event.start">@event.start.pretty</div>
+            <div itemprop="location" itemscope itemtype="http://schema.org/Place">
+                @fragments.event.addressSummary(event)
+            </div>
+            @for(desc <- event.description) {
+                <div class="event-item__description" itemprop="description">
+                    @desc.blurb
+                </div>
+            }
+            <div class="event-item__footer">
+                @fragments.event.itemMetaAvailability(event)
+                <button class="action-proceed event-item__action" itemprop="url"></button>
             </div>
         </div>
-        <div class="event-item__media">
-            <a href="@routes.Event.details(event.slug)" itemprop="image" content="@event.socialImgUrl">
-                @fragments.event.image(event)
-            </a>
-        </div>
     </div>
-</div>
+    <div class="event-item__media" itemprop="image" content="@event.socialImgUrl">
+        @fragments.event.image(event)
+    </div>
+</a>
