made mobile meta a fragment

--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -13,10 +13,7 @@
 <html class="js-off id--signed-out @htmlClass">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport"                       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-        <meta name="HandheldFriendly"               content="true"/>
-        <meta name="apple-touch-fullscreen"         content="yes" />
-        <meta name="apple-mobile-web-app-capable"   content="yes">
+        @fragments.meta.mobile()
         <meta name="description"                    content="@pageInfo.description"/>
         <meta name="rating"                         content="general"/>
         <meta http-equiv="imagetoolbar"             content="no"/>
