--- a/frontend/assets/stylesheets/tools.style.scss
+++ b/frontend/assets/stylesheets/tools.style.scss
@@ -1,3 +1,4 @@
+//TODO we have to bring in a lot here due to dependencies as a separate pull request these need splitting out.
 /* ==========================================================================
    Settings & Tools
    ========================================================================== */
