--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -89,7 +89,7 @@
 
             <div class="event-image-credit u-event-content-width">
                 <div class="event-image-credit__detail">
-                    <i class="icon-caption-camera u-align-middle"></i>
+                    @fragments.inlineIcon("caption-camera")
                     <span class="u-align-middle">@event.imageMetadata.flatMap(_.description)</span>
                     <span class="u-align-middle">Photograph: @event.imageMetadata.map(_.photographer)</span>
                 </div>
