--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -46,7 +46,7 @@
                     @fragments.event.addressSummary(event)
                 </div>
             </div>
-            @if(!event.isNoTicketEvent) {
+            @if(event.isSoldThruEventbrite) {
                 @fragments.event.ticketDetails(event)
             }
             <img class="event-logo" src="@Asset.at("images/providers/" + event.providerOpt.getOrElse(event.metadata.identifier) + ".svg")">
@@ -153,7 +153,7 @@
                                 </div>
                             }
 
-                            @if(!event.isNoTicketEvent) {
+                            @if(event.isSoldThruEventbrite) {
 
                                 @for(ticket <- event.generalReleaseTicket) {
                                     @if(event.isSoldOut) {
