Improve display of icons in pattern library

--- a/frontend/app/views/patterns/patterns.scala.html
+++ b/frontend/app/views/patterns/patterns.scala.html
@@ -26,7 +26,7 @@
     <h1>Pattern Library</h1>
 
     @pattern("Icons") {
-        <div class="js-icon-grid"></div>
+        <div class="js-icon-grid pattern-icon-grid"></div>
     }
 
     @pattern("Base - Inline Text Elements") {
