--- a/frontend/app/views/fragments/oauth/staffWrongGroup.scala.html
+++ b/frontend/app/views/fragments/oauth/staffWrongGroup.scala.html
@@ -1,6 +1,6 @@
 @import configuration.Config
 
 <p>
-    You need to be added to the right Google Group to create test users - contact
-    <a href="mailto:@Config.membershipDevEmail">@Config.membershipDevEmail</a> if you definitely need access.
+    You need to be added to the right Google Group to use this page - please contact
+    <a href="mailto:@Config.membershipDevEmail">@Config.membershipDevEmail</a> if you are in need of access.
 </p>
