added alt for event image

--- a/frontend/app/views/staff/eventOverview.scala.html
+++ b/frontend/app/views/staff/eventOverview.scala.html
@@ -19,8 +19,8 @@
                 <article class="event-detail">
                     <div>
                         <div class="event-detail_image">
-                            <a href="/event/@event.id" class="" target="_blank">
-                                <img src="@event.socialImgUrl" alt="" class="responsive-img"/>
+                            <a href="/event/@event.id" target="_blank">
+                                <img src="@event.socialImgUrl" alt="Event Image" class="responsive-img"/>
                                 <span class="pseudo-link event-detail-title">@event.name.text</span>
                             </a>
                         </div>
