--- a/frontend/assets/stylesheets/base/_base.scss
+++ b/frontend/assets/stylesheets/base/_base.scss
@@ -33,6 +33,7 @@ html {
     // This is used as a baseline for rem (root ems) values
     // Calc needed for IE11 to do the math properly
     // See http://bit.ly/1g4X0bX — thanks @7studio and @dawitti
+    font-size: -webkit-calc(1em * .625);
     font-size: calc(1em * .625);
 }
 
