the summary page was missing the page-content class

--- a/frontend/app/views/tier/downgrade/summary.scala.html
+++ b/frontend/app/views/tier/downgrade/summary.scala.html
@@ -6,7 +6,7 @@
 
 @main("Change Tier Summary | " + futureSubscription.planName + " from " + currentSubscription.planName) {
 
-    <main role="main">
+    <main role="main" class="page-content">
         <div class="content__container">
             <section>
                 @fragments.layout.sectionHeader("Sorry to see you go&hellip;")
