update ophan url to use the slugified url

--- a/frontend/app/views/staff/eventOverview.scala.html
+++ b/frontend/app/views/staff/eventOverview.scala.html
@@ -28,7 +28,7 @@
                             <a href="@(s"${Config.membershipUrl}/preview-event/${event.id}")"
                                target="_blank"
                                class="event-sub-detail">preview</a>
-                            <a href="@(s"https://dashboard.ophan.co.uk/info?url=${Config.membershipUrl}/event/${event.id}")"
+                            <a href="@(s"https://dashboard.ophan.co.uk/info?url=${event.memUrl}")"
                                target="_blank"
                                class="event-sub-detail">ophan</a>
                             <a href="@(s"${Config.eventbriteUrl}/myevent?eid=${event.id}")"
